- Valley.getElevationLeftOfHeadwall does lookup and interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images


DONE:
******* 1.00.01 (23914)
8/26/08 - tweak MountainsAndValleyNode alignment to match new background image
8/26/08 - fix: valley is narrower near headwall in background image (new image file, still not exact, but close enough)
8/21/08 - fix "glacier budget vs elevation" chart so that SHOW_NEGATIVE_ABLATION flag works properly
******* 1.00.00 (23465)
7/23/08 - update screenshot
7/23/08 - add sim description (aka, abstract)
******* 0.00.39 (23459)
7/23/08 - fix: resetting the clock speed doesn't reset the clock speed slider
7/23/08 - fix: path for ice surface below ELA is missing the point at the terminus when the terminus is close to the ELA
7/23/08 - rename "ice surface ripple" to "ice ripple" throughout (I kept searching for the wrong class names)
7/23/08 - adjust z offset of ripples so that they are more evenly distributed across ice surface
7/23/08 - load Tonisa_Glacier.jpg statically in GlaciersImages
7/23/08 - rename glacierPicture.jpg to Tonisa_Glacier.jpg, to match asset filename
7/23/08 - convert real glacier picture from PNG to JPG (653KB versus 57KB, original asset was JPG)
7/23/08 - remove alignment points from background image, turn off alignment nodes in sim
7/23/08 - delete penguin image files, remove license file entry
7/23/08 - move background image alignment points to GlaciersConstants, generalize marker node creation
7/23/08 - move debug flags from GlaciersPlayArea to GlaciersConstants
7/23/08 - make ripples slightly darker above ELA so that they're easier to see when snowfall is visible
7/23/08 - increase default clock speed to 4fps
******* 0.00.38 (23437)