@@ -127,6 +127,9 @@ public class GlaciersConstants {
     public static final Color ICE_CROSS_SECTION_COLOR = new Color( 232, 242, 252 ); // bluish white
     public static final Color ICE_SURFACE_COLOR = Color.WHITE;
     
+    // color of ground below valley floor
+    public static final Color UNDERGROUND_COLOR = new Color( 180, 158, 134 ); // tan
+    
     // main control panel color
     public static final Color CONTROL_PANEL_BACKGROUND_COLOR = new Color( 219, 255, 224 ); // pale green
     
